# usdpaa

./: .gitignore  COPYING  Makefile  Makefile.am  Makefile.kw  Makefile.sub.example  README.BuildSystem  README.MakefileTemplate  SOURCE_THIS  dpasync.sh  non-ltib-env  non-ltib-env.powerpc64  standalone-env  standalone-env.powerpc64
apps/: Makefile.am  Makefile.sub  SOURCE_THIS  badinit.c  blastman.c  bman_test_high.c  common.c  common.h  poc.c  qman_test.h  qman_test_high.c  speed.c  test.h  us_config_fm0_sgmii.xml  us_config_serdes_0xe_2sgmii.xml  us_policy_hash_ipv4_src_dst.xml  user_example.c
apps/ipfwd/app/: Makefile.am  config-20G.xml  config.xml  ipfwd.c  ipfwd.h  ipfwd_handler.c  sample-1024.xml  sample-32.xml
apps/ipfwd/app_config/: Makefile.am  ipc_send.c  ipc_send.h  ipfwd_20G.script  ipfwd_20G_1Mroutes.sh  ipfwd_20G_nosgmii_script.sh  ipfwd_22G.script  ipfwd_22G.sh  ipfwd_t2080qds_42G.sh
apps/reflector/: Makefile.am  Makefile.sub  main.c  ppam_if.h  reflector.c  us_config_fm0_sgmii.xml
bman/: Kconfig  Makefile  bman_config.c  bman_driver.c  bman_high.c  bman_low.c  bman_private.h  bman_sys.h  bman_test.c  bman_test.h  bman_test_high.c
drivers/: Makefile.am
fman/: fman.c
include/: Makefile.am  compat.h  conf.h  dma_mem.h  fman.h  fmc_netcfg_parser.h  fsl_bman.h  fsl_qman.h  fsl_shmem.h  fsl_usd.h  linux  of.h  usdpa_netcfg.h
lib/: Makefile.am
of/: of.c
qman/: Kconfig  Makefile  qman_config.c  qman_driver.c  qman_fqalloc.c  qman_high.c  qman_low.c  qman_low.h  qman_private.h  qman_sys.h  qman_test.c  qman_test.h  qman_test_fqrange.c  (+3 more)
(+524 files in other folders)
